--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
              </div>
              <!-- ############################################################################################################### -->
-             <button type="submit" class="btn btn-primary">Sign in</button>
+             <button type="submit" class="btn btn-primary">Send</button>
         </div>
           <!-- ############################################################################################################### -->
           <div class="col-lg-4 col-md-4 col-sm-12 address">
